# pySurvAnalysis

./: .~lock.SampleDataSet.xlsx#  main.py  pyproject.toml  report.md
.github/workflows/: claude.yml  daily_docs.yaml
DilpSocialCrowdingCodeOnly/: mDilp235bx_Crowding_donor_20v40.xlsx  plot_kaplan_meier.py  prepare_survival_data.py  survival_data.csv
SampleDataSet_no_censor_results/: individual_data.csv  lifetables.csv  report.md
SampleDataSet_results/: individual_data.csv  lifetables.csv  report.md
doc/: user_guide.md
pysurvanalysis/: __init__.py  __main__.py  config.py  data_loader.py  exclusions.py  lifetable.py  pipeline.py  plotting.py  report.py  scripts_io.py  statistics.py  ui.py
pysurvanalysis/apps/: __init__.py  _config_tabs.py  common.py  config_editor.py  hub.py  qc_viewer.py
pysurvanalysis/script_editor/: __init__.py  actions.py  canvas.py  inspector.py  palette.py  preview.py  runner.py  window.py
pysurvanalysis/ui/: __init__.py  icons.py  settings.py  theme.py  widgets.py  zoom.py
