[project]
name = "pysurvanalysis"
version = "0.3.0"
description = "Comprehensive survival analysis pipeline for census-based experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lifelines>=0.30.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyqt6>=6.7",
    "scipy>=1.14",
    "statsmodels>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pysurvanalysis = "main:main"
